Updates to report

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@ dataset/dummy_linh.csv
 __pycache__/*
 .ipynb_checkpoints/*
 
+report/report.aux
+report/report.log
+report/report.pdf
+
 auxil/*
 out/*
 .idea/*
